Update build file